adjust the spacing issues

--- a/OMS Front End/src/pages/customerDetail/features/HistoryDetail/TimeLine.scss
+++ b/OMS Front End/src/pages/customerDetail/features/HistoryDetail/TimeLine.scss
@@ -287,6 +287,8 @@
                     width: 30px;
                     height: 30px;
                     margin-left: -47px;
+                    margin-top: 5px;
+
                     img{
                         width: 17px;
                         height: 17px;
