--- a/OMS Front End/src/pages/customerDetail/features/settingDetail/SettingDetails.scss
+++ b/OMS Front End/src/pages/customerDetail/features/settingDetail/SettingDetails.scss
@@ -158,7 +158,7 @@
       .section-title {
         h4 {
           color: var(--themeColor);
-          font-size: var(--commonFont-extraSmall);
+          font-size: var(--commonFont-large);
         }
       }
     }
